# CSC417-a3-finite-elements-3d

./: .gitmodules  CMakeLists.txt  README.html  README.md  README.tex.md  assignment_setup.h  main.cpp
.github/workflows/: c-cpp.yml
cmake/: FindLIBIGL.cmake
data/: arma_6.ele  arma_6.node  armadillo.mtl  coarse_bunny.mesh  coarser_bunny.mesh
include/: T_linear_tetrahedron.h  V_linear_tetrahedron.h  V_spring_particle_particle.h  assemble_forces.h  assemble_stiffness.h  build_skinning_matrix.h  d2V_linear_tetrahedron_dq2.h  d2psi_neo_hookean_dq2.h  dV_linear_tetrahedron_dq.h  dV_spring_particle_particle_dq.h  dphi_linear_tetrahedron_dX.h  dpsi_neo_hookean_dF.h  fixed_point_constraints.h  implicit_euler.h  linearly_implicit_euler.h  mass_matrix_linear_tetrahedron.h  mass_matrix_mesh.h  newtons_method.h  phi_linear_tetrahedron.h  pick_nearest_vertices.h  psi_neo_hookean.h  quadrature_single_point.h
shared/include/: EigenTypes.h  find_min_vertices.h  init_state.h  read_tetgen.h  visualization.h
shared/src/: find_min_vertices.cpp  init_state.cpp  read_tetgen.cpp  (+1 more)
src/: T_linear_tetrahedron.cpp  V_linear_tetrahedron.cpp  V_spring_particle_particle.cpp  assemble_forces.cpp  assemble_stiffness.cpp  build_skinning_matrix.cpp  d2V_linear_tetrahedron_dq2.cpp  d2psi_neo_hookean_dF2.cpp  dV_linear_tetrahedron_dq.cpp  dV_spring_particle_particle_dq.cpp  dphi_linear_tetrahedron_dX.cpp  dpsi_neo_hookean_dF.cpp  fixed_point_constraints.cpp  mass_matrix_linear_tetrahedron.cpp  mass_matrix_mesh.cpp  phi_linear_tetrahedron.cpp  pick_nearest_vertices.cpp  psi_neo_hookean.cpp
